--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Données météorologiques</title>
+    <title>Météo GlaGla</title>
 </head>
 <body>
     
-    <h1>Prévisions météorologiques</h1>
+    <h1>Prévisions météorologiques sur 5 jours</h1>
 
-    <h2>Prévisions météorologiques pour <span id="city">Val-de-Reuil</span></h2>
+    <h2>Ville de <span id="city">Val-de-Reuil</span></h2>
 
     <div class="search-container">
         <input type="text" id="new-city" placeholder="Nouvelle ville">
