--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
           <div class="back-fold"></div>
           <div class="letter">
             <div class="letter-border"></div>
-            <div class="letter-context">Alerte tempête</div>
+            <div class="letter-context">Alerte tempête Ciaran</div>
             <div class="letter-stamp">
-              <div class="letter-stamp-inner"></div>
             </div>
           </div>
           <div class="top-fold"></div>
@@ -26,7 +25,7 @@
         </div>
         <div class="shadow"></div>
       </div>
-      
+
 
     <h2>Ville de <span id="city">Val-de-Reuil</span></h2>
 
